@@ -3,6 +3,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Port away from old-style apt.Package candidateFoo and installedFoo
     properties, preferring candidate.foo and installed.foo.  In a number of
     cases we have to check whether candidate/installed is non-None first.
+  * Use apt_pkg.version_compare rather than apt_pkg.VersionCompare.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 10:52:39 +0100
 
